packages/lustre-v6.6.103.3/test/should_fail/syntax/carligths.lus
node carligths(TL, TR, LH, FL, LRL:bool) returns (side, low, high, fog, long:bool);
var fog_select, long_select :bool;
let
  assert(not ((LH and TL) or (LH and TR)));
  fog_select = FL;
  long_select = LRL;
  side = false -> (not(pre(side) or pre(low) or pre(high)) and TL) or
    ( (pre(high) or pre(low) ) and (TL or TR)) or
      (if not(TL or TR or LH) then pre(side) else false);
  low = false -> (pre(side) and TL) or 
    (pre(high) and LH) or 
      (if not(TL or TR or LH) then pre(low) else false);
  high = false -> (pre(low) and LH ) or 
    (if not(TL or TR or LH) then pre(high) else false);
  fog = pre(low) and fog_select;
  long = pre(high) and long_select;


     
tel
